# sidequest

./: .env.example  .gitignore  .session  CHANGELOG.md  CLAUDE.md  JARGONFILE.md  README.md  SOUL.md  UI  genre_pack_gaps_pack_level.csv  genre_pack_gaps_report.md  genre_pack_gaps_world_level.csv  genre_pack_inheritance.md  genre_pack_runtime_inheritance.md  justfile  package-lock.json  package.json  pyproject.toml  repos.yaml
.claude/: settings.json
.githooks/: pre-commit
.pennyfarthing/: repos.yaml
.sq-playtest-screenshots/: check_turn.sh  turn_spans.py  watcher_capture.py
design_handoff_sidequest_gameboard/: README.md
docs/: FEATURES.md  advancement-effect-hosts.md  api-contract.md  architecture.md  content-drift-triage.md  dev-guide.md  feature-inventory-coverage-snapshot-2026-06-12.md  feature-inventory.md  gap-analysis-rust-port.md  genre-pack-status.md  genre-pack-structure.md  genre_pack_gaps_report.md  genre_pack_inheritance.md  gm-handbook.md  inventory-audit-2026-06-14.md  llm-backends.md  lora-training-guide.md  magic-system-design-guide.md  narrative-lenses.md  narrator-prompt-rag-strategy.md  otel-dashboard-design.md  playtest-cookbook.md  playtest-script.md  port-drift-feature-audit-2026-04-24.md  port-lessons.md  projection-filter-predicates.md  prompt-reworked.md  r2_preview.html  relationship-systems.md  shared-claude-preamble.md  system-diagram.md  tech-stack.md  universal-room-graph-cartography.md  wiring-diagrams.md
scenarios/: _seed_bootstrap_probe.yaml  asymmetric_smoke.yaml  beneath_sunden_engagement.yaml  cache_diag_60_3.yaml  combat_otel.yaml  combat_stress.yaml  coyote_salvage_smoke.yaml  five_points_honorific.yaml  five_points_lull.yaml  five_points_standoff.yaml  latency_diag_82_9.yaml  otel_extended.yaml  road_warrior_engagement.yaml  smoke_test.yaml
scripts/: README.md  anthropic_usage.py  caption_claude.py  caption_florence2.py  caption_images.py  feature_inventory_verify.py  generate_creature_images.py  generate_image_sheets.py  generate_music.py  generate_npc.py  generate_poi_images.py  generate_portrait_images.py  generate_r2_preview.py  grab_stills.py  migrate_adr_frontmatter.py  migrate_poi_backdrop_lod.py  migrate_portrait_manifest_lods.py  migrate_visual_tag_overrides.py  playtest.py  playtest_dashboard.py  playtest_messages.py  playtest_otlp.py  preview-prompt.py  r2_audit.py  r2_manifest.py  r2_manifest_from_bucket.py  r2_sync_packs.py  r2_verify_packs.py  reconcile_dark_spend.py  regenerate_feature_inventory.py  render_common.py  render_pd_audio.py  render_queue.py  render_world_assets.sh  sidequest-encounter  sidequest-loadout  sidequest-npc  sidequest-up.sh  test_playtest_otlp.py  validate_adr_frontmatter.py  (+1 more)
seeds/: README.md  questions.yaml  untried-pairs.yaml
sprint/: 15-29-session.md  16-11-session.md  16-12-session.md  16-16-session.md  16-5-session.md  16-9-session.md  19-4-session.md  20-11-session.md  20-12-session.md  20-6-session.md  21-2-session.md  34-11-session.md  34-12-session.md  35-11-session.md  35-13-session.md  35-5-session.md  epic-1.yaml  (+118 more)
(+2146 files in other folders)
