[project]
name = "sidequest-orchestrator-scripts"
version = "1.3.0"
description = "Cross-repo tooling scripts for SideQuest (image gen, playtest, migrations, ADR tooling, etc.)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    # r2_sync_packs imports boto3 at module top; required to collect any r2 test.
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This project is not meant to be installed as a wheel. It exists to give
# the scripts/ and tests/ trees a pyproject.toml so pytest discovers them
# and relative imports from the scripts/ tree resolve.
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: end-to-end tests that hit the live daemon — skipped by default; run with `-m slow`",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
